Type-o and cross-links

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -78,13 +78,18 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 					</ul>
 				</div>
 
+                <div class="samples-section">
+					<h3><a href="{{ page.bundleURL }}/migration/impl" target="_blank">Content Migration</a></h3>
+					<p>Sample code for building out common custom tooling required for Content Migration activities.</p>                  
+				</div>                                
+                
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/events/impl" target="_blank">Events</a></h3>
 					<p>Asynchronous system notifications.</p>
 					<ul>
 						<li><a href="{{ page.bundleURL }}/events/impl/SampleSlingEventHandler.java" target="_blank">Sling Event Handler</a></li>
-            <li><a href="{{ page.bundleURL }}/jobs/impl/SampleEventHandlerWithImmediateJobExecution.java" target="_blank">Sling Event Handler (with Immediate Job Execution)</a></li>
-            <li><a href="{{ page.bundleURL }}/events/impl/SampleJcrEventListener.java" target="_blank">JCR Event Listener</a></li>
+                        <li><a href="{{ page.bundleURL }}/jobs/impl/SampleEventHandlerWithImmediateJobExecution.java" target="_blank">Sling Event Handler (with Immediate Job Execution)</a></li>
+                        <li><a href="{{ page.bundleURL }}/events/impl/SampleJcrEventListener.java" target="_blank">JCR Event Listener</a></li>
 						<li><a href="{{ page.bundleURL }}/events/cq5/impl/SampleSlingEventHandler.java" target="_blank">(Legacy) CQ5 Sling Event Handler</a></li>
 					</ul>
 				</div>
@@ -102,20 +107,19 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/jobs/impl" target="_blank">Jobs</a></h3>
 					<p>Completing work with some guarantees.</p>
-          <ul>
+                    <ul>
 						<li><a href="{{ page.bundleURL }}/jobs/impl/SampleSlingJobConsumer.java" target="_blank">Sling Job Consumer</a></li>
 						<li><a href="{{ page.bundleURL }}/jobs/impl/SampleEventHandlerWithImmediateJobExecution.java" target="_blank">Sling Event Handler (with Immediate Job Execution)</a></li>
-          </ul>
+                    </ul>
 				</div>
 
-                <div class="samples-section">
-					<h3><a href="{{ page.bundleURL }}/migration/impl" target="_blank">Content Migration</a></h3>
-					<p>Sample code for building out common custom tooling required for Content Migration activities.</p                    
-				</div>
-                
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/mbean/impl" target="_blank">MBeans</a></h3>
 					<p>Interact with your code via JMX and the Apache Felix MBean Web UI.</p>
+                    <ul>
+						<li><a href="{{ page.bundleURL }}/mbean/impl/SampleMBeanImpl.java" target="_blank">Basic MBean with Statistics and Operations</a></li>
+						<li><a href="{{ page.bundleURL }}/migration/impl/SampleContentReplicationHarnessImpl .java" target="_blank">Replication Harness w/ MBean</a></li>
+                    </ul>
 				</div>
 
 				<div class="samples-section">
@@ -130,9 +134,6 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 					<h3><a href="{{ page.bundleURL }}/predicates/impl/SamplePredicate.java" target="_blank">Predicates</a></h3>
 					<p>Filter Nodes and Resources in and out of Lists and Pathfields.</p>
 				</div>
-
-
-
 			</div>
 <!-- **************************************** COLUMN 2 **************************************** -->
 			<div class="col2">
