Updated Samples for Felix Servlet Filter and Wrapped Response

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -98,7 +98,8 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 					<h3><a href="{{ page.bundleURL }}/filters/impl" target="_blank">Filters</a></h3>
 					<p>Executed in a chain against every HTTP request, Filters provide a powerful hook into the HTTP Request processing context.</p>
 					<ul>
-						<li><a href="{{ page.bundleURL }}/filters/impl/SampleSlingIncludeFilter.java" target="_blank">Sling Include Filter</a></li>
+						<li><a href="{{ page.bundleURL }}/filters/impl/SampleServletFilter.java" target="_blank">Felix Servlet Filter</a></li>
+                        <li><a href="{{ page.bundleURL }}/filters/impl/SampleSlingIncludeFilter.java" target="_blank">Sling Include Filter</a></li>
 						<li><a href="{{ page.bundleURL }}/filters/impl/SampleSlingRequestFilter.java" target="_blank">Sling Request Filter</a></li>
 						<li><a href="{{ page.bundleURL }}/filters/impl/SampleThreadLocalFilter.java" target="_blank">Thread Local Filter</a></li>
 					</ul>
@@ -171,6 +172,15 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 					</ul>
 				</div>
 
+                <div class="samples-section">
+					<h3><a href="{{ page.bundleURL }}/servlets/impl" target="_blank">Requests &amp Responses</a></h3>
+					<p>Common patterns when working with Request and Response objects.</p>
+					<ul>
+						<li><a href="{{ page.bundleURL }}/servlets/impl/SampleWrappedResponse.java" target="_blank">Wrapped Response</a></li>
+</li>
+					</ul>
+				</div>
+                
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/servlets/impl" target="_blank">Servlets</a></h3>
 					<p>HTTP Servlets. GET. POST. 'nuff said.</p>
