Granite and CQ Workflow Process links

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -227,7 +227,9 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 					<h3><a href="{{ page.bundleURL }}/workflow/impl" target="_blank">Workflow</a></h3>
 					<p>Workflow provides a powerful toolset for applying business logic to content in AEM.</p>
                     <ul>
-						<li><a href="{{ page.bundleURL }}/workflow/impl/SampleProcessWorkflow.java" target="_blank">CQ Workflow Process</a></li>
+						<li><a href="{{ page.bundleURL }}/workflow/impl/SampleGraniteProcessWorkflow.java" target="_blank">Granite Workflow Process</a></li>
+						<li><a href="{{ page.bundleURL }}/workflow/impl/SampleCQProcessWorkflow.java" target="_blank">CQ Workflow Process</a></li>
+                        
                         <li><a href="{{ page.bundleURL }}/workflow/impl/SampleWrappingWorkflowProcess .java" target="_blank">Wrapping Workflow Process</a></li>
                     </ul>                    
 				</div>
