Sling Model Exporter sample

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -125,9 +125,10 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 
 				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/models" target="_blank">Models</a></h3>
-					<p>Create models for resources (or other things).</p>
+					<p>Create business models of resources (or other things).</p>
 					<ul>
 						<li><a href="{{ page.bundleURL }}/models/SampleSlingModel.java" target="_blank">Sling Model</a></li>
+                        <li><a href="{{ page.bundleURL }}/models/SampleSlingModelExporter.java" target="_blank">Sling Model Exporter</a></li>
 					</ul>
 				</div>
 
