Jcr Observation Throttle

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -94,6 +94,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 						<li><a href="{{ page.bundleURL }}/events/impl/SampleSlingEventHandler.java" target="_blank">Sling Event Handler</a></li>
 						<li><a href="{{ page.bundleURL }}/jobs/impl/SampleEventHandlerWithImmediateJobExecution.java" target="_blank">Sling Event Handler (with Immediate Job Execution)</a></li>
 						<li><a href="{{ page.bundleURL }}/events/impl/SampleJcrEventListener.java" target="_blank">JCR Event Listener</a></li>
+						<li><a href="{{ page.bundleURL }}/events/SampleJcrObservationThrottle.java" target="_blank">JCR Observation Throttle</a></li>
 						<li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-samples/blob/9387008a7f692e2fc330b67582694053eddb027d/bundle/src/main/java/com/adobe/acs/samples/events/cq5/impl/SampleSlingEventHandler.java" target="_blank">(Deprecated) CQ5 Sling Event Handler</a></li>
 					</ul>
 				</div>
