--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -160,6 +160,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 						OSGi services are the perfect place to develop business logic for
 						re-use across all your AEM applications.</p>
 					<ul>
+						<li><a href="{{ page.bundleURL }}/services/impl/SampleOsgiR6AnnotationsImpl.java" target="_blank">OSGi R6 Annotations</a></li>
 						<li><a href="{{ page.bundleURL }}/services/impl/SampleMultiReferenceServiceImpl.java" target="_blank">Service w/ Multi-References</a></li>
 						<li><a href="{{ page.bundleURL }}/services/impl/SampleMutableStateServiceImpl.java" target="_blank">Service w/ Mutable State</a></li>
 						<li><a href="{{ page.bundleURL }}/services/impl/SampleServiceImpl.java" target="_blank">Basic Service</a></li>
