ACS AEM Samples - SampleScopeWithPrivileges

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -75,6 +75,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 					<ul>
 						<li><a href="{{ page.bundleURL }}/authentication/impl/SampleServiceLoginResourceResolverImpl.java" target="_blank">Service Resource Resolvers</a></li>
 						<li><a href="{{ page.bundleURL }}/authentication/impl/SampleLoginHookAuthenticationHandler.java" target="_blank">Authentication Handler Login Hook</a></li>
+						<li><a href="{{ page.bundleURL }}/authentication/oauth/impl/SampleScopeWithPrivileges.java" target="_blank">OAuth Scope with Privileges</a></li>							
 					</ul>
 				</div>
 
