Granite Operations Dashboard Overlay

--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -112,6 +112,13 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 				</div>
 
 				<div class="samples-section">
+					<h3>Health Check</h3>
+					<ul>
+						<li><a href="https://github.com/heervisscher/htl-examples/blob/master/ui.apps/src/main/content/jcr_root/apps/settings/granite/operations/hc/.content.xml" target="_blank">Granite Operations Dashboard overlay node definition</a></li>
+					</ul>
+				</div>
+
+				<div class="samples-section">
 					<h3><a href="{{ page.bundleURL }}/jobs/impl" target="_blank">HTL</a></h3>
 					<p>HTL samples from <a target="_blank" href="https://github.com/heervisscher/htl-examples"></a>heervisscher</a>.</p>
 					<ul>
