Contributors and fixed issues w BS styles conflicting w site styles

--- a/_contributors/adobe/index.html
+++ b/_contributors/adobe/index.html
@@ -1,5 +1,5 @@
 ---
 title: Adobe
-url: https://wwww.adobe.com
-tags: acs-aem-commons, acs-aem-tools, acs-aem-samples
+website: https://wwww.adobe.com
+tags: acs-aem-commons acs-aem-tools acs-aem-samples
 ---
