--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -93,5 +93,7 @@ description: A way to bootstrap AEM project with common functionality, a set of 
 
 {% include shared/who-we-are.html %}
 
+{% include shared/contributors.html %}
+
 {% include shared/projects.html %}
 
