* Added docs for Tag Creator and Asset Folder Creator * Re-organized MCP Tools into their own feature pages * Fixed PSC thumbnail size * Added back-button * Updated how New and Upgrade badges are set (via version checks)

--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -73,7 +73,7 @@ description: A way to bootstrap AEM project with common functionality, a set of 
             {% for page in sorted %}
             {% assign depth = page.path | split: '/' | size %}
                 {% if depth == 4 %}
-                    {% include shared/feature-card.html feature=page project=site.data.acs-aem-commons.name %}
+                    {% include shared/feature-card.html feature=page project=site.data.acs-aem-commons %}
                 {% endif %}
             {% endfor %}
         </div>
