--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -151,6 +151,7 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 					<ul>
 						<li><a href="{{ page.bundleURL }}/models/SampleSlingModel.java" target="_blank">Sling Model</a></li>
 						<li><a href="{{ page.bundleURL }}/models/SampleSlingModelExporter.java" target="_blank">Sling Model Exporter</a></li>
+						<li><a href="{{ page.bundleURL }}/models/SampleComponentExporter.java" target="_blank">AEM Content Services compatible Sling Model w/ Exporter</a></li>
 					</ul>
 				</div>
 
