--- a/acs-aem-samples/index.html
+++ b/acs-aem-samples/index.html
@@ -111,6 +111,19 @@ contentURL: https://github.com/Adobe-Consulting-Services/acs-aem-samples/tree/ma
 				</div>
 
 				<div class="samples-section">
+					<h3><a href="https://github.com/niekraaijmakers/layout-wcm-pages" target="_blank">Header / Footer - Layout WCM solution</a></h3>
+					<p>A ready to use setup to handle complex headers and footers by leveraging everything AEM has to offer</p>
+					<p>Personalized header based on cookies (or anything else)</p>
+					<p>Highly flexible, maintainable, for both authors and developers</p>
+					<p>(Re)publish your header / footer, not all pages that use it</p>
+					<p>Can be used with <a href="https://helpx.adobe.com/experience-manager/6-4/sites/administering/using/msm.html">Multi Site Manager</a>, <a href="https://helpx.adobe.com/experience-manager/6-3/sites/administering/using/translation.html">Translations</a>, <a href="https://helpx.adobe.com/experience-manager/6-3/sites/authoring/using/templates.html">Template Designer</a></p>
+					<ul>
+						<li><a href="https://helpx.adobe.com/experience-manager/kt/platform-repository/using/sling-dynamic-include-technical-video-setup.html" target="_blank">Uses Sling Dynamic Include</a></li>
+						<li><a href="https://adobe-consulting-services.github.io/acs-aem-commons/features/http-cache/index.html" target="_blank">Cached with ACS Aem - Commons Http Cache</a></li>
+					</ul>
+				</div>
+
+				<div class="samples-section">
 					<h3>Health Check</h3>
 					<ul>
 						<li><a href="https://github.com/heervisscher/htl-examples/blob/master/ui.apps/src/main/content/jcr_root/apps/settings/granite/operations/hc/.content.xml" target="_blank">Granite Operations Dashboard overlay node definition</a></li>
