--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -40,11 +40,9 @@ description: A way to bootstrap AEM project with common functionality, a set of 
                 <h4>How to use ACS AEM Commons!</h4>
 
                 <p>
-                    Add as a 
-                    <a href="/acs-aem-commons/pages/maven.html">sub package</a> 
-                    from 
-                    <a href="http://repo.adobe.com/nexus/content/groups/public/com/adobe/acs/acs-aem-commons-content/{{ site.data.acs-aem-commons.version }}/">repo.adobe.com</a> using Maven or manually deploy the 
-                    <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases">package</a> using package manager.
+                    <a href="/acs-aem-commons/pages/maven.html">Embed ACS AEM Commons in your own project</a> 
+                    or manually deploy the 
+                    <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases">packages (ui.apps &amp; ui.content)</a> using package manager.
                     <sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>
                 </p>
             </div>
