--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: acs-aem-projects_home
-title: Adobe Consulting Services
+title: AEM Community Software
 description: A collection of AEM works aimed at enabling the deployment and development of AEM-based solutions.
 ---
 
