Always use the container-package `acs-aem-commons-content` for embedding
Refer to compatibility chart for legacy AEM versions.
Remove workaround for https://issues.apache.org/jira/browse/JCRVLT-343
This closes #226

--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -42,7 +42,7 @@ description: A way to bootstrap AEM project with common functionality, a set of 
                 <p>
                     <a href="/acs-aem-commons/pages/maven.html">Embed ACS AEM Commons in your own project</a> 
                     or manually deploy the 
-                    <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases">packages (ui.apps &amp; ui.content)</a> using package manager.
+                    <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases">container package (acs-aem-commons-content)</a> using package manager.
                     <sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>
                 </p>
             </div>
