--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -40,7 +40,7 @@ description: A way to bootstrap AEM project with common functionality, a set of 
                 <h4>How to use ACS AEM Commons!</h4>
 
                 <p>
-                    <a href="/acs-aem-commons/pages/maven.html">Embed ACS AEM Commons in your own project</a> 
+                    <a href="/acs-aem-commons/pages/maven.html">Add ACS AEM Commons in your project</a> 
                     or manually deploy the 
                     <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases">container package (acs-aem-commons-content)</a> using package manager.
                     <sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>
@@ -88,8 +88,6 @@ description: A way to bootstrap AEM project with common functionality, a set of 
         </li>
     </ol>
 </div>
-
-{% include shared/acs-aem-bundles.html %}
 
 {% include shared/who-we-are.html %}
 
