--- a/acs-aem-commons/index.html
+++ b/acs-aem-commons/index.html
@@ -14,7 +14,7 @@ description: A way to bootstrap AEM project with common functionality, a set of 
                 <h4>What ACS AEM Commons is!</h4>
 
                 <p>
-                    A way to <em>bootstrap AEM projects</em> with common functionality,
+                    A free, community owned, way to <em>bootstrap AEM projects</em> with common functionality,
                     a set of <em>reusable components</em>,
                     and an <em>AEM development toolkit</em>.
                 </p>
@@ -27,7 +27,7 @@ description: A way to bootstrap AEM project with common functionality, a set of 
                 <h4>What ACS AEM Commons isn't!</h4>
 
                 <p>
-                    A <em>framework</em>,
+                    A supported by Adobe Support <em>framework</em>,
                     library with <em>required</em>
                     <a href="/acs-aem-commons/pages/thirdparty.html">3rd party dependencies</a>,
                     or a library that <em>changes</em> standard AEM functionality by default.
